Add web-enabled beer label recognition v2
