# apps/hoppify/internal/http/server.go
@@ -22,13 +22,14 @@ type liveResponse struct {
 type HandlerOption func(*handlerConfig)
 
 type handlerConfig struct {
-	captureService   CaptureCreator
-	detectService    DetectorService
-	cropService      CropCreator
-	beerLabelService BeerLabelIdentifier
-	limits           capturemodel.Limits
-	log              *zap.Logger
-	metrics          *HTTPMetrics
+	captureService      CaptureCreator
+	detectService       DetectorService
+	cropService         CropCreator
+	beerLabelService    BeerLabelIdentifier
+	beerLabelWebService BeerLabelIdentifier
+	limits              capturemodel.Limits
+	log                 *zap.Logger
+	metrics             *HTTPMetrics
 }
 
 func WithCaptureService(service CaptureCreator) HandlerOption {
@@ -52,6 +53,12 @@ func WithCropService(service CropCreator) HandlerOption {
 func WithBeerLabelService(service BeerLabelIdentifier) HandlerOption {
 	return func(cfg *handlerConfig) {
 		cfg.beerLabelService = service
+	}
+}
+
+func WithBeerLabelWebService(service BeerLabelIdentifier) HandlerOption {
+	return func(cfg *handlerConfig) {
+		cfg.beerLabelWebService = service
 	}
 }
 
@@ -92,6 +99,7 @@ func NewHandler(options ...HandlerOption) http.Handler {
 	mux.HandleFunc("POST /api/v1/detect", detectObjects(cfg.detectService, cfg.log))
 	mux.HandleFunc("POST /api/v1/crops", createCrops(cfg.cropService, cfg.log))
 	mux.HandleFunc("POST /api/v1/beer-labels/identify", identifyBeerLabel(cfg.beerLabelService, cfg.log))
+	mux.HandleFunc("POST /api/v2/beer-labels/identify", identifyBeerLabel(cfg.beerLabelWebService, cfg.log))
 
 	return logAndMeasureRequests(mux, cfg.log, cfg.metrics)
 }
